recursion.logo.lessons.recursion.logo.polygonfractal.PolygonFractal.scala.error
PolygonFractal:16: error: ';' expected but ')' found.
  polygonFractal(levels-1,length*shrink))
                                        ^