recursion.logo.lessons.recursion.logo.polygonfractal.PolygonFractal.scala.code
def polygonFractal (levels:Int, sides:Int, length:Double, shrink:Double) {
      if (levels==0){
    avance(length)
    return
  } else
  polygonFractal(levels-1,length*shrink)
  droite(108)
  polygonFractal(levels-1,length*shrink)
  droite(108)
  polygonFractal(levels-1,length*shrink)
  droite(108)
  polygonFractal(levels-1,length*shrink)
	droite(108)
  polygonFractal(levels-1,length*shrink)
  droite(108)
  polygonFractal(levels-1,length*shrink))
}